# spectral-similarities-by-peaks

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: collab.yml
.github/workflows/: ci.yml  pages.yml
crates/cli/: Cargo.toml
crates/cli/src/: checkpoint.rs  cli.rs  config_diversity.rs  distribution.rs  lib.rs  main.rs  model.rs  output.rs  pathway.rs  pathway_artifacts.rs  pathway_discriminability.rs  pathway_discriminability_export.rs  pathway_discriminability_plots.rs  progress.rs  run.rs  spectra.rs  visualize.rs
crates/cli/tests/: full_smoke.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs  pathway_lines.rs
crates/web/: Cargo.toml  Dioxus.toml  index.html
crates/web/public/: style.css
crates/web/public/data/: manifest.json
crates/web/public/data/harmonized-full/: distribution_grid_configs.json  pathway_discriminability_lines.json
crates/web/src/: config_key.rs  fetch.rs  main.rs  pathway_panel.rs  responsive_svg.rs  svg_export.rs  url_state.rs
slurm/lrc/: array_job.sh  cancel.sh  compress_parquets.sh  compress_parquets_job.sh  compute_pathway_discriminability.sh  compute_pathway_discriminability_job.sh  finalize.sh  finalize_job.sh  finalize_merge_job.sh  finalize_shard_job.sh  finalize_sharded.sh  prefetch.sh  prefetch_job.sh  pull_results.sh  setup_env.sh  status.sh  submit.sh
src/: checkpoint.rs  cli.rs  config_diversity.rs  data.rs  distribution.rs  lib.rs  model.rs  neighbors.rs  output.rs  pathway.rs  pathway_artifacts.rs  progress.rs  run.rs  spectra.rs  visualize.rs
tests/: full_smoke.rs
