[workspace]
members = ["crates/cli", "crates/render", "crates/web"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
license = "MIT"
readme = "README.md"

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "deny"
warnings = "deny"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
dbg_macro = "deny"
expect_used = "deny"
missing_docs_in_private_items = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"

# Profile used by `dx build/serve --profile wasm-release` for the browser
# viewer. Strips DWARF debug info so the bundled `wasm-opt` never has to parse
# it — recent rustc emits DWARF 5 which older binaryen builds reject with
# SIGABRT. The CLI's regular `release` profile is unaffected.
[profile.wasm-release]
inherits = "release"
strip = "debuginfo"
