[package]
name = "spectral-similarities-by-peaks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
description = "Experiments on how MS2 spectral similarity distributions change with retained peaks."

[dependencies]
anyhow = "1"
arrow-array = "58"
arrow-schema = "58"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
colorous = "1"
indicatif = "0.18"
mascot-rs = { git = "https://github.com/LucaCappelletti94/mascot-rs", default-features = false, features = ["std"] }
mass_spectrometry = { git = "https://github.com/earth-metabolome-initiative/mass-spectrometry-traits", features = ["rayon", "std"] }
ndarray = "0.17"
ndarray-npy = { version = "0.10", features = ["compressed_npz"] }
parquet = { version = "58", features = ["arrow", "zstd"] }
plotters = { version = "0.3", default-features = false, features = ["ab_glyph", "bitmap_backend", "bitmap_encoder", "line_series", "svg_backend"] }
spectral-render = { path = "../render" }
rand = "0.10"
rand_chacha = "0.10"
rayon = "1.11"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.52", features = ["rt-multi-thread"] }
zstd = "0.13"

[lints]
workspace = true
